<resources>
    <string name="app_name">Quiz O Menia</string>
    <string name="grid">Quiz O Menia(QOM)</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logical">Logical</string>
    <string name="title_activity_logical_home">Logical_home</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">Close</string>
    <string name="back">Back</string>


    <string name="homefrag">Home</string>
    <string name="title_activity_english">English</string>
    <string name="title_activity_english_home">English_home</string>
    <string name="title_activity_quantitative">Quantitative</string>
    <string name="title_activity_quantitative_home">Quantitative_home</string>
    <string name="title_activity_technical">Technical</string>
    <string name="title_activity_technical_home">Technical_home</string>
    <string name="title_activity_humanres">Human Resources</string>
    <string name="title_activity_humanres_home">Human Resources_home</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_about_home">About Us_home</string>
    <string name="title_activity_quantitative__hcf__lcm">Quantitative_HCF_LCM</string>

    <string name="btn_level0">Level 0</string>
    <string name="btn_level1">Level 1</string>
    <string name="title_activity_hcf__lcm__quiz">HCF_LCM_Quiz</string>
    <string name="question">1. Find the greatest number that will divide 43, 91 and 183 so as to leave the same remainder in each case.</string>
    <string name="answer_four">A. 4</string>
    <string name="answer_three">B. 7</string>
    <string name="answer_two">C. 9</string>
    <string name="answer_one">D. 13</string>

    <string name="btn_prev">Previous</string>
    <string name="btn_next">Next</string>
<string name="btn_rules">Rules</string>
    <string name="btn_end">End Test</string>
    <string name="title_activity_decimal__fractions">Decimal_Fractions</string>

    <string name="btn_start">Start Test</string>
    <string name="btn_setting">Setting</string>

    <string name="btn_exit">Exit</string>
    <string name="titlehcflcm">HCF &amp; LCM</string>
    <string name="title_activity_setting">Setting</string>
    <string name="btn_update">Update</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="btnnext">Next Question</string>
    <string name="title_activity_end_quiz">EndQuiz</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_answer">Answers</string>
    <string name="title_activity_answers">Answers</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_quantitative__pipes__cisterns">Quantitative_Pipes_Cisterns</string>
    <string name="title_activity_quantitative__chain__rule">Quantitative_Chain_Rule</string>
    <string name="title_activity_quantitative__decimal__fractions">Quantitative_Decimal_Fractions
    </string>
    <string name="title_activity_quantitative__square__cube__roots">Quantitative_Square_Cube_Roots
    </string>
    <string name="title_activity_quantitative__average">Quantitative_Average</string>
    <string name="title_activity_quantitative__problem_on__numbers">
        Quantitative_Problem_on_Numbers
    </string>
    <string name="title_activity_quantitative__problem_on__ages">Quantitative_Problem_on_Ages
    </string>
    <string name="title_activity_quantitative__percentage">Quantitative_Percentage</string>
    <string name="title_activity_quantitative__profit__loss">Quantitative_Profit_Loss</string>
    <string name="title_activity_quantitative__ratio__proportion">Quantitative_Ratio_Proportion
    </string>
    <string name="title_activity_quantitative__partnership">Quantitative_Partnership</string>
    <string name="title_activity_quantitative__time__work">Quantitative_Time_Work</string>
    <string name="title_activity_quantitative__time__distance">Quantitative_Time_Distance</string>
    <string name="title_activity_quantitative__problem_on__trains">Quantitative_Problem_on_Trains
    </string>
    <string name="title_activity_quantitative__boats__streams">Quantitative_Boats_Streams</string>
    <string name="title_activity_quantitative__alligation__mixture">
        Quantitative_Alligation_Mixture
    </string>
    <string name="title_activity_quantitative__simple__compound__interest">
        Quantitative_Simple_Compound_Interest
    </string>
    <string name="title_activity_quantitative__volume__surface__areas">
        Quantitative_Volume_Surface_Areas
    </string>
    <string name="title_activity_quantitative__calendar__clocks">Quantitative_Calendar_Clocks
    </string>
    <string name="title_activity_quantitative__permutations__combinations">
        Quantitative_Permutations_Combinations
    </string>
    <string name="title_activity_quantitative__probability">Quantitative_Probability</string>
    <string name="title_activity_quantitative__height__distances">Quantitative_Height_Distances
    </string>

    <string name="under">Under The Guidence Of</string>
    <string name="mentor">Nitin Kumar</string>
    <string name="about">About Quiz O Menia</string>
    <string name="develop">Developed By</string>
    <string name="member1">Rajnish Kumar Singh</string>
    <string name="member2">Amit Kumar</string>
    <string name="member3">Vajinderi Pal</string>
    <string name="title_activity_technical__c__language">C Language</string>
    <string name="title_activity_technical__c_plus_plus">C++</string>
    <string name="title_activity_technical__c_hash">C#</string>
    <string name="title_activity_technical__java">Java</string>
    <string name="title_activity_technical__data__structure">Data Structure</string>
    <string name="title_activity_technical__dot__net">.Net</string>
    <string name="title_activity_technical__software_testing">Software Testing</string>
    <string name="title_activity_technical__networking">Networking</string>
    <string name="title_activity_technical__operating__system">Operating System</string>
    <string name="title_activity_technical__database__management">Database Management</string>
    <string name="title_activity_technical__microsoft__sql">Microsoft SQL</string>
    <string name="title_activity_tecnical__unix">UNIX</string>
    <string name="title_activity_logical__number__series">Number Series</string>
    <string name="title_activity_logical__letters">Letters</string>
    <string name="title_activity_logical__verbal__classification">Verbal Classification</string>
    <string name="title_activity_logical__essential__part">Essential Part</string>
    <string name="title_activity_logical__analogies">Analogies</string>
    <string name="title_activity_logical__artificial__language">Artificial Language</string>
    <string name="title_activity_logical__matching__definitions">Matching Definitions</string>
    <string name="title_activity_logical__making__judgments">Logical_Making_Judgments</string>
    <string name="title_activity_logical__logical__problems">Logical Problems</string>
    <string name="title_activity_logical__analyzing__arguments">Analyzing Arguments</string>
    <string name="title_activity_logical__statement_and__assumption">Statement and Assumption
    </string>
    <string name="title_activity_logical__course_of__action">Course of Action</string>
    <string name="title_activity_logical__statement_and__conclusion">Statement and Conclusion
    </string>
    <string name="title_activity_logical__course_and__effect">Course and Effect</string>
    <string name="title_activity_logical__statement_and__argument">Statement and Argument</string>
    <string name="title_activity_logical__blood__relation">Blood Relation</string>
    <string name="title_activity_logical__sitting__arrangement">Sitting Arrangement</string>
    <string name="title_activity_logical__logical__sequence_of__words">Logical Sequence of Words
    </string>
    <string name="title_activity_logical__direction__sense">Direction Sense</string>
    <string name="title_activity_qomrules">QOMRules</string>
    <string name="question_no">10</string>
    <string name="title_activity_human_resources_question">HR Questions</string>
    <string name="title_activity_antonyms">Antonyms</string>
    <string name="title_activity_synonyms">Synonyms</string>
    <string name="title_activity_change_of_speech">Change of Speech</string>
    <string name="title_activity_change_of_voice">Change of Voice</string>
    <string name="title_activity_correct__spellings">Correct Spellings</string>
    <string name="title_activity_one__word__substitutes">One Word Substitutes</string>
    <string name="title_activity_related__pair__words">Related Pair Words</string>
    <string name="title_activity_selecting__words">Selecting Words</string>
    <string name="title_activity_sentence__correction">Sentence Correction</string>
    <string name="title_activity_sentence__improvement">Sentence Improvement</string>
    <string name="title_activity_spotting__errors">Spotting Errors</string>
    <string name="title_activity_hrgeneral_question">HR Questions</string>
    <string name="title_activity_question1">Question1</string>
</resources>
