<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bg_main"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bg_main"
    >

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="15dip" android:paddingBottom="25dip"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about"
            android:id="@+id/textView"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false" />
    </LinearLayout>



    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/under"
            android:id="@+id/textView2"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false"
            android:paddingTop="15dip"
            android:paddingBottom="15dip" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mentor"
            android:id="@+id/textView3"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false"

            android:textStyle="bold|italic"
            />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/develop"
            android:id="@+id/textView1"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false"
            android:paddingTop="15dip" />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/member1"
            android:id="@+id/textView4"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false"

            android:textStyle="bold|italic"
            />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/member2"
            android:id="@+id/textView5"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false"

            android:textStyle="bold|italic"
            />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/member3"
            android:id="@+id/textView7"


            android:textColor="@color/btn_txt"
            android:textSize="30sp"
            android:textIsSelectable="false"
            android:textStyle="bold|italic"
            />

    </LinearLayout>




</LinearLayout>
</ScrollView>