<?xml version="1.0" encoding="utf-8"?>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="center_horizontal"
    android:background="@color/bg_main">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bg_main">


    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="15dip" android:paddingBottom="15dip"
        android:gravity="center_horizontal">

        <!--    <ImageView android:id="@+id/logo" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:src="@drawable/logo2" />
    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textColor="@color/btn_txt"
            android:id="@+id/quizstartpage"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>



    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_txt"
            android:text="@string/btn_start"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/bg_main"
            android:clickable="true"
            android:onClick="btnStart" />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnRules"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_txt"
            android:text="@string/btn_rules"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/bg_main"
            android:clickable="true"
            android:onClick="btnRules" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_txt"
            android:text="@string/btn_setting"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/bg_main"
            android:clickable="true"
            android:onClick="btnSetting" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:paddingTop="5dip" android:paddingBottom="5dip"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_txt"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/bg_main"
            android:clickable="true"
            android:onClick="btnExit" />

    </LinearLayout>




</LinearLayout>
 </ScrollView>